force-app/main/default/objects/PA_Invoice__c/PA_Invoice__c.object-meta.xml
<CustomObject>
    <label>PA Invoice</label>
    <nameField>
        <displayFormat>Invoice N-{000000000}</displayFormat>
        <label>PA Invoice  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PA Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>