force-app/main/default/objects/PA_Invoice__c/fields/Bank_Detials__c.field-meta.xml
<CustomField>
    <fullName>Bank_Detials__c</fullName>
    <label>Bank Detials</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>