force-app/main/default/objects/PA_Invoice__c/fields/Invoice_Due__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Due__c</fullName>
    <label>Invoice Due</label>
    <type>Date</type>
</CustomField>