force-app/main/default/objects/PA_Invoice__c/fields/Invoice_Note__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Note__c</fullName>
    <label>Invoice Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>