force-app/main/default/objects/PA_Invoice__c/fields/Monthly_Report__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Report</label>
    <referenceTo>Monthly_Report__c</referenceTo>
    <relationshipLabel>PA Invoices</relationshipLabel>
    <relationshipName>PA_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>