force-app/main/default/objects/PA_Invoice__c/fields/PA_Amount__c.field-meta.xml
<CustomField>
    <fullName>PA_Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>InvoiceLineItem__c.Amount__c</summarizedField>
    <summaryForeignKey>InvoiceLineItem__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>