force-app/main/default/objects/PA_Invoice__c/fields/Paid_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_To_Date__c</fullName>
    <label>Paid To Date</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>